# HalfPipe2Bids

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose_dev.yml  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile.dev  Dockerfile.test
draft/: config.py  functions.py  main.py  test.ipynb
draft/output/BEP017/: dataset_description.json  meas-PearsonCorrelation_relmat.json
draft/output/BEP017/sub-10159/func/: sub-10159_task-rest_seg-atlas-schaefercombined417_desc-denoisecompcor_timeseries.tsv  sub-10159_task-rest_seg-atlas-schaefercombined417_desc-denoisescrubbing.5_timeseries.tsv  sub-10159_task-rest_seg-atlas-schaefercombined417_meas-PearsonCorrelation_desc-denoisecompcor_relmat.tsv  sub-10159_task-rest_seg-atlas-schaefercombined417_meas-PearsonCorrelation_desc-denoisescrubbing.5_relmat.tsv
draft/output/BEP017/sub-10171/func/: sub-10171_task-rest_seg-atlas-schaefercombined417_desc-denoisecompcor_timeseries.tsv  sub-10171_task-rest_seg-atlas-schaefercombined417_desc-denoisescrubbing.5_timeseries.tsv  sub-10171_task-rest_seg-atlas-schaefercombined417_meas-PearsonCorrelation_desc-denoisecompcor_relmat.tsv  sub-10171_task-rest_seg-atlas-schaefercombined417_meas-PearsonCorrelation_desc-denoisescrubbing.5_relmat.tsv
halfpipe2bids/: __init__.py  _oldmain.py  config.py  functions.py  logger.py  main.py  utils.py
halfpipe2bids/tests/: test_cli.py  test_utils.py
halfpipe2bids/tests/data/: README.md
src/: cleaner.py  main.py  preprocessor.py
test/: test.sh
(+32 files in other folders)
