[project]
name = "halfpipe2bids"
description = "Rename files from HalfPipe to BIDS BEP017 convention."
readme = "README.md"
authors = [
    { name = "Pierre Bergeret", email = "pierre.bergeret12@gmail.com" },
]
requires-python = ">=3.12"
license = { file="LICENSE" }
dependencies = [
    "nilearn>=0.11.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pre-commit",
  "halfpipe2bids[test]",
  'tox',
  'mypy',
  'types-setuptools',
  'pandas-stubs',
  'types-tqdm'
]
test = [
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["test"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--doctest-modules", "-v"]
markers = [
    "smoke: smoke tests that will run on a downsampled real dataset (deselect with '-m \"not smoke\"')",
]
# filterwarnings = ["error"]